# ajuna-solochain

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check-pull-request.yml
docker/: Dockerfile
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
resources/solochain/: testnet-raw.json  testnet.json
runtime/solo/: Cargo.toml  build.rs
runtime/solo/src/: consts.rs  gov.rs  impls.rs  lib.rs  types.rs
