[package]
name = "ajuna-solo-node"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[dependencies]
# General
clap        = { workspace = true }
hex-literal = { workspace = true }
log         = { workspace = true }
serde       = { workspace = true, features = [ "derive" ] }
jsonrpsee   = { workspace = true, features = [ "server" ] }
futures     = { workspace = true }
serde_json  = { workspace = true }

# Parity codec
parity-scale-codec = { workspace = true }

# Substrate
frame-benchmarking             = { workspace = true }
frame-benchmarking-cli         = { workspace = true }
frame-system                   = { workspace = true }
pallet-asset-tx-payment        = { workspace = true }
pallet-transaction-payment     = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship            = { workspace = true }
sc-chain-spec                  = { workspace = true }
sc-cli                         = { workspace = true }
sc-client-api                  = { workspace = true }
sc-offchain                    = { workspace = true }
sc-consensus                   = { workspace = true }
sc-consensus-aura              = { workspace = true }
sc-consensus-grandpa           = { workspace = true }
sc-executor                    = { workspace = true }
sc-network                     = { workspace = true }
sc-network-sync                = { workspace = true }
sc-rpc                         = { workspace = true }
sc-rpc-api                     = { workspace = true }
sc-service                     = { workspace = true }
sc-sysinfo                     = { workspace = true }
sc-telemetry                   = { workspace = true }
sc-tracing                     = { workspace = true }
sc-transaction-pool            = { workspace = true }
sc-transaction-pool-api        = { workspace = true }
sp-api                         = { workspace = true }
sp-block-builder               = { workspace = true }
sp-blockchain                  = { workspace = true }
sp-consensus-aura              = { workspace = true }
sp-consensus-grandpa           = { workspace = true }
sp-core                        = { workspace = true }
sp-io                          = { workspace = true }
sp-inherents                   = { workspace = true }
sp-keyring                     = { workspace = true }
sp-keystore                    = { workspace = true }
sp-runtime                     = { workspace = true }
sp-timestamp                   = { workspace = true }
substrate-frame-rpc-system     = { workspace = true }
substrate-prometheus-endpoint  = { workspace = true }
try-runtime-cli                = { workspace = true }

# Runtime
ajuna-solo-runtime = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"ajuna-solo-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-system/try-runtime",
	"ajuna-solo-runtime/try-runtime",
	"sp-runtime/try-runtime",
    "try-runtime-cli/try-runtime"
]
